WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283949
Speedometer 3: Fix rendering issue on TodoMVC-React-Complex-DOM
https://bugs.webkit.org/show_bug.cgi?id=283949
Summary
Speedometer 3: Fix rendering issue on TodoMVC-React-Complex-DOM
Matt Woodrow
Reported
2024-12-02 15:59:13 PST
<
rdar://140217928
>
https://github.com/WebKit/Speedometer/issues/434
Occasionally the hidden dropdown menus are seen animating opacity during the test.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-12-02 17:23:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37350
EWS
Comment 2
2025-01-08 15:06:53 PST
Committed
288617@main
(41852cb138bc): <
https://commits.webkit.org/288617@main
> Reviewed commits have been landed. Closing PR #37350 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug